add USA shields for all states

--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -2533,6 +2533,7 @@ layers:
                         network: 'US:I'
                     draw:
                         mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
                             # you need to match any custom shield to the vector tile `network` values
                             sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
                             priority: 46
@@ -2574,6 +2575,7 @@ layers:
                         $zoom: { min: 7 }
                     draw:
                         mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
                             # you need to match any custom shield to the vector tile `network` values
                             sprite: |
                                 function() { return ('US:US-' + feature.shield_text.length + 'char'); }
@@ -2632,6 +2634,7 @@ layers:
                         }
                     draw:
                         mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
                             sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
                             #priority: 48
                             text:
@@ -2689,6 +2692,7 @@ layers:
                         }
                     draw:
                         mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
                             sprite: |
                                 function() { return ( 'US:NY-' + feature.shield_text.length + 'char'); }
                             text:
@@ -2730,6 +2734,7 @@ layers:
                         }
                     draw:
                         mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
                             sprite: |
                                 function() { return ( 'US:PA-' + feature.shield_text.length + 'char'); }
                             text:
@@ -2797,6 +2802,7 @@ layers:
                         }
                     draw:
                         mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
                             # you need to match any custom shield to the vector tile `network` values
                             sprite: function() { return ('county_shield-' + feature.shield_text.length + 'char'); }
                             #color: pink
@@ -2831,6 +2837,106 @@ layers:
                         draw:
                             mapzen_icon_library:
                                 size: [[6,[30px,14px]],[13,[33px,15px]],[15,[40px,18px]]]
+
+                US-OTHER:
+                    filter: |
+                        function() {
+                            return feature.shield_text &&
+                                /^US:AK$/.test(feature.network) ||
+                                /^US:AL$/.test(feature.network) ||
+                                /^US:AR$/.test(feature.network) ||
+                                /^US:AZ$/.test(feature.network) ||
+                                /^US:BIA$/.test(feature.network) ||
+                                /^US:BLM$/.test(feature.network) ||
+                                /^US:CO$/.test(feature.network) ||
+                                /^US:DC$/.test(feature.network) ||
+                                /^US:FL$/.test(feature.network) ||
+                                /^US:FSH$/.test(feature.network) ||
+                                /^US:FSR$/.test(feature.network) ||
+                                /^US:GA$/.test(feature.network) ||
+                                /^US:HI$/.test(feature.network) ||
+                                /^US:ID$/.test(feature.network) ||
+                                /^US:KS$/.test(feature.network) ||
+                                /^US:LA$/.test(feature.network) ||
+                                /^US:MA$/.test(feature.network) ||
+                                /^US:CT$/.test(feature.network) ||
+                                /^US:IL$/.test(feature.network) ||
+                                /^US:TX$/.test(feature.network) ||
+                                /^US:IN$/.test(feature.network) ||
+                                /^US:RI$/.test(feature.network) ||
+                                /^US:ME$/.test(feature.network) ||
+                                /^US:WV$/.test(feature.network) ||
+                                /^US:MT$/.test(feature.network) ||
+                                /^US:MD$/.test(feature.network) ||
+                                /^US:MN$/.test(feature.network) ||
+                                /^US:MO$/.test(feature.network) ||
+                                /^US:NC$/.test(feature.network) ||
+                                /^US:MI$/.test(feature.network) ||
+                                /^US:ND$/.test(feature.network) ||
+                                /^US:NE$/.test(feature.network) ||
+                                /^US:NH$/.test(feature.network) ||
+                                /^US:NJ$/.test(feature.network) ||
+                                /^US:IA$/.test(feature.network) ||
+                                /^US:DE$/.test(feature.network) ||
+                                /^US:KY$/.test(feature.network) ||
+                                /^US:MS$/.test(feature.network) ||
+                                /^US:NM$/.test(feature.network) ||
+                                /^US:NV$/.test(feature.network) ||
+                                /^US:OH$/.test(feature.network) ||
+                                /^US:OK$/.test(feature.network) ||
+                                /^US:OR$/.test(feature.network) ||
+                                /^US:SC$/.test(feature.network) ||
+                                /^US:SD$/.test(feature.network) ||
+                                /^US:TN$/.test(feature.network) ||
+                                /^US:UT$/.test(feature.network) ||
+                                /^US:VA$/.test(feature.network) ||
+                                /^US:VT$/.test(feature.network) ||
+                                /^US:WA$/.test(feature.network) ||
+                                /^US:WI$/.test(feature.network) ||
+                                /^US:WY$/.test(feature.network)
+                                /*US:CA*/
+                                /*US:I*/
+                                /*US:NY*/
+                                /*US:PA*/
+                                /*US:US*/
+                                /*county_shield*/
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: |
+                                function() { return ( feature.network + '-' + feature.shield_text.length + 'char'); }
+                            text:
+                                # offset: [0px, 1px]
+                                font:
+                                    fill: [0.308,0.308,0.308]
+                                    size: [[7,7px],[13,9px],[15,10px]]
+                    width_1char:
+                        filter: function() { return (feature.shield_text.length === 1) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[13px,17px]],[13,[15px,19px]],[15,[18px,22px]]]
+                    width_2char:
+                        filter: function() { return (feature.shield_text.length === 2) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[17px,17px]],[13,[19px,19px]],[15,[22px,22px]]]
+                    width_3char:
+                        filter: function() { return (feature.shield_text.length === 3) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[20px,17px]],[13,[22px,19px]],[15,[27px,22px]]]
+                    width_4char:
+                        filter: function() { return (feature.shield_text.length === 4) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[21px,17px]],[13,[24px,19px]],[15,[29px,22px]]]
+                    width_5char:
+                        filter: function() { return (feature.shield_text.length === 5) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[22px,17px]],[13,[25px,19px]],[15,[30px,22px]]]
+
         path:
             filter:
                 all:
