improvements à la @matteblair

--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -634,14 +634,15 @@ styles:
                             float DOT_SIZE = 1.8; // bigger value = smaller dots
                             float SPEED = 10.; // bigger value = faster transition
 
-                            vec2 tc = TileCoords() * scale * pow(2., floor(u_map_position.z) - abs(u_tile_origin.z));
+                            vec2 tc = TileCoords() * scale * exp2(floor(u_map_position.z) - abs(u_tile_origin.z));
                             vec2 IN = brick(tc, 2.);
                             float A = circleDF(vec2(0.5) - IN) * DOT_SIZE;
                             vec2 OUT = brick(tc, 4.);
                             float B = circleDF(vec2(0.5) - OUT) * DOT_SIZE;
+                            float transition = pow(fract(u_map_position.z), SPEED);
                             // keep B dots big as they fade in, to maintain density
-                            B *= pow(fract(u_map_position.z), SPEED);
-                            float d = mix(A, B, pow(fract(u_map_position.z), SPEED));
+                            B *= transition;
+                            float d = mix(A, B, transition);
                             return aastep(size, d);
                         }
                     #endif
